--- a/templates/game_crud/_form.html.twig
+++ b/templates/game_crud/_form.html.twig
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center mt-4">
-                    <button class="btn btn-secondary">{{ button_label|default('Save') }}</button>
+                    <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
                 </div>
 
                 {{ form_end(form) }}
