--- a/templates/game_crud/edit.html.twig
+++ b/templates/game_crud/edit.html.twig
@@ -11,7 +11,7 @@
     {{ include('game_crud/_form.html.twig', {'button_label': 'Update'}) }}
 
     <div class="d-flex justify-content-center mt-4">
-        <a class="btn btn-danger" href="{{ path('app_game_crud_index') }}">Back to list</a>
+        <a class="btn btn-outline-secondary" href="{{ path('app_game_crud_index') }}">Back to list</a>
     </div>
 
     {{ include('game_crud/_delete_form.html.twig') }}
