--- a/templates/game_crud/new.html.twig
+++ b/templates/game_crud/new.html.twig
@@ -10,7 +10,7 @@
 
     {{ include('game_crud/_form.html.twig') }}
     <div class="d-flex justify-content-center mt-4">
-        <a class="btn btn-danger" href="{{ path('app_game_crud_index') }}">Back to list</a>
+        <a class="btn btn-outline-secondary" href="{{ path('app_game_crud_index') }}">Back to list</a>
     </div>
     </div>
 {% endblock %}
