--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -24,7 +24,7 @@
                             <div class="card-body d-flex flex-column">
                                 <h3 class="card-title">{{ newsItem.title }}</h3>
                                 <p class="card-text flex-grow-1">{{ newsItem.summary|length > 120 ? newsItem.summary|slice(0, 120) ~ '...' : newsItem.summary }}</p>
-                                <a href="{{ path('app_news_show', {id: newsItem.id, slug: newsItem.slug}) }}" class="btn btn-primary mt-auto align-self-start">Read More</a>
+                                <a href="{{ path('app_news_show', { id: newsItem.id, slug: newsItem.slug }) }}" class="btn btn-sm btn-primary">Read More</a>
                             </div>
                             <div class="card-footer bg-transparent border-0">
                                 <small class="text-muted">Posted {{ newsItem.createdAt|ago }} in {{ newsItem.genre.name }}</small>
