--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,7 @@
             </ul>
             {% endif %}
             <div class="ms-auto">
-                <!-- <a href="{{ path('app_search') }}" class="btn btn-outline-light me-2"><i class="fas fa-search"></i></a>app_account under this-->
+                <a href="{{ path('app_search') }}" class="btn btn-outline-light border-0 me-2"><i class="fas fa-search"></i></a>
                 {% if is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('app_admin') }}" class="btn btn-secondary me-2">Dashboard</a>
                 {% endif %}
